# messenger

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml  ci.yml  dev-ci.yml  main-ci-cd.yml  release.yml
backend/: WebSocketServer.cpp  WebSocketServer.hpp  WebSocketSession.cpp  WebSocketSession.hpp  a.cpp  functions.cpp  functions.hpp  main.cpp  web_socket_server.cpp  web_socket_server.hpp  web_socket_session.cpp  web_socket_session.hpp
backend/auth_service/: CMakeLists.txt  Dockerfile  auth.cpp  auth.hpp  crow_http.cpp  docker-compose.yml
backend/auth_service/src/: auth.cpp  auth.hpp  crow_http.cpp  main.cpp
backend/base_images/boost_image/: Dockerfile
backend/base_images/crow-image/: Dockerfile
backend/msg_service/: CMakeLists.txt  Dockerfile  connector.cpp  connector.hpp  docker-compose.yml  functions.hpp  web_socket_server.cpp  web_socket_server.hpp  web_socket_session.hpp
backend/msg_service/src/: bimap.cpp  bimap.hpp  connector.cpp  connector.hpp  functions.cpp  main.cpp  web_socket_server.cpp  web_socket_server.hpp  web_socket_session.cpp  web_socket_session.hpp
db/: Dockerfile  docker-compose.yml  init.sql
frontend/: Dockerfile  chat.html  chatScript.js  index.html  indexScript.js  style.css
frontend/authPage/: indexScript.js  style.css
frontend/chatPage/: chat.html  chatScript.js  style.css
frontend/regPage/: reg.html  regScript.js  regStyle.css
